--- a/stylee.css
+++ b/stylee.css
@@ -98,14 +98,14 @@ body{
     margin-top: 20px;
     justify-content: space-between;
 }
-.footer button{
+.footer {
     border: none;
     outline: none;
-    background: #8e49E8;
-    color: #fff;
+    text-align: center;
+    color: rgb(230, 42, 42);
     font-size: 16px;
     cursor: pointer;
-    border-radius: 3px;
+    border-radius: 10px;
     padding: 6px 10px;
     opacity: 0.6;
     pointer-events: none;
