--- a/stylee.css
+++ b/stylee.css
@@ -98,11 +98,12 @@ body{
     margin-top: 20px;
     justify-content: space-between;
 }
-.footer {
+.footer button{
     border: none;
     outline: none;
-    text-align: center;
-    color: rgb(230, 42, 42);
+    background: #8e49E8;
+    align-items: center;
+    color: #fff;
     font-size: 16px;
     cursor: pointer;
     border-radius: 10px;
