--- a/stylee.css
+++ b/stylee.css
@@ -4,6 +4,7 @@
     box-sizing:border-box;
     font-family: 'Poppins', sans-serif;
 }
+
 body{
     height: 100vh;
     width: 100%;
@@ -140,6 +141,11 @@ html, body {
     background-color: pink;
 }
 .footer-bgwhite{
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(240, 241, 146);
+}
+.footer-2{
     text-align: center;
     padding: 10px;
     background-color: rgb(240, 241, 146);
