--- a/stylee.css
+++ b/stylee.css
@@ -8,7 +8,7 @@
 body{
     height: 100vh;
     width: 100%;
-    background-image: url(images/habit.jpg);
+    background-color: rgb(158, 236, 236);
 }
 
 
@@ -28,7 +28,7 @@ html, body {
     margin: 120px auto;
     max-width: 400px;
     width: 100%;
-    background: rgb(195, 235, 245);
+    background: rgb(226, 243, 221);
     border-radius: 5px;
     padding: 25px
 }
@@ -59,7 +59,7 @@ html, body {
     height: 100%;
     border: none;
     outline: none;
-    background: #49e886;
+    background: #e4b1e9;
     color: rgb(255, 255, 255);
     font-size: 22px;
     cursor: pointer;
@@ -144,12 +144,12 @@ html, body {
 .footer-bgwhite{
     text-align: center;
     padding: 10px;
-    background-color: rgb(240, 241, 146);
+    background-color: rgb(240, 207, 217);
 }
 .footer-2{
     text-align: center;
     padding: 10px;
-    background-color: rgb(240, 241, 146);
+    background-color: rgb(245, 206, 227);
 }
 .container{
     width: 40%;
